k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: walletapp-frontend-deployment
  namespace: expense-tracker-ns

spec:
  replicas: 1

  selector:
    matchLabels:
      app: walletapp-frontend

  template:
    metadata:
      labels:
        app: walletapp-frontend

    spec:
      containers:
        - name: walletapp-frontend

          image: sharfuddin47/expenseapp-frontend:latest

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
