k8s/springboot-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: walletapp-backend-deployment
  namespace: expense-tracker-ns

spec:
  replicas: 1

  selector:
    matchLabels:
      app: walletapp-backend

  template:
    metadata:
      labels:
        app: walletapp-backend

    spec:
      containers:
        - name: walletapp-backend
          image: sharfuddin47/expenseapp-backend:latest

          ports:
            - containerPort: 1011

          resources:
            requests:
              cpu: "500m"
              memory: "768Mi"
            limits:
              cpu: "2"
              memory: "2Gi"
