k8s/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: walletapp-frontend-service
  namespace: expense-tracker-ns

spec:
  type: ClusterIP

  selector:
    app: walletapp-frontend

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
