k8s/springboot-service.yml
apiVersion: v1
kind: Service

metadata:
  name: wallet-backend-service
  namespace: expense-tracker-ns

spec:
  selector:
    app: walletapp-backend

  type: ClusterIP

  ports:
    - port: 1011
      targetPort: 1011
