k8s/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: walletapp-frontend-ingress
  namespace: expense-tracker-ns
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: walletapp-frontend-service
                port:
                  number: 80
